--- a/schedule/index.html
+++ b/schedule/index.html
@@ -1,9 +1,8 @@
-
 ---
 layout: default
-title: Schedule
+title: Hank Quinlan, Horrible Cop
 ---
 <div class="schedule">
-	<h1>Schedule page</h1>
+	<h1>About page schedule</h1>
 	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
-</div>
+</div><!-- /.schedule -->
