--- a/schedule/index.html
+++ b/schedule/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: Schedule
 ---
 <div class="schedule">
 	<h1>About page schedule</h1>
