--- a/schedule/index.html
+++ b/schedule/index.html
@@ -3,6 +3,6 @@ layout: default
 title: Schedule
 ---
 <div class="schedule">
-	<h1>About page schedule</h1>
+	<h1>Schedule</h1>
 	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
 </div><!-- /.schedule -->
